<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/add_payment"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_6"
        android:background="@drawable/shape_rounded"
        android:drawableStart="@drawable/baseline_currency_rupee_24"
        android:drawablePadding="@dimen/dp_4"
        android:hint="@string/amount"
        android:imeOptions="actionDone"
        android:inputType="number|numberDecimal"
        android:padding="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,TextFields"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginVertical="@dimen/dp_6"
        android:background="@drawable/shape_spinner"
        android:padding="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_amount" />

    <ImageView
        android:id="@+id/img_down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_4"
        android:contentDescription="@string/add_payment"
        app:layout_constraintBottom_toBottomOf="@id/spinner"
        app:layout_constraintEnd_toEndOf="@id/spinner"
        app:layout_constraintTop_toTopOf="@id/spinner"
        app:srcCompat="@drawable/ic_down_arrow" />

    <EditText
        android:id="@+id/bank_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginVertical="@dimen/dp_6"
        android:background="@drawable/shape_rounded"
        android:hint="@string/provider_icici_citibank_etc"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_10"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/transaction_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/shape_rounded"
        android:hint="@string/transfer_reference"
        android:imeOptions="actionDone"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_10"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_details"
        app:layout_constraintVertical_bias="0"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginVertical="@dimen/dp_20"
        app:backgroundTint="@null"
        android:background="@drawable/shape_rounded_btn"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginVertical="@dimen/dp_20"
        android:background="@drawable/shape_rounded_blue_btn"
        app:backgroundTint="@null"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
